--- a/ui-v2/src/app/globals.css
+++ b/ui-v2/src/app/globals.css
@@ -109,3 +109,42 @@ input::-webkit-inner-spin-button {
 input[type='number'] {
 	-moz-appearance: textfield;
 }
+
+.scrollbar-hide::-webkit-scrollbar {
+	display: none;
+}
+
+.editor {
+	width: 100%;
+	min-width: 100%;
+	height: 100%;
+	min-height: 350px;
+	display: flex;
+	flex-direction: column;
+	justify-content: start;
+	align-items: start;
+	padding: 10px;
+	overflow: auto;
+	outline: none;
+	border-radius: 0 0 8px 8px;
+	font-size: 1.2rem;
+	margin-top: 1rem;
+	border: 1px solid gray;
+	background-color: rgba(0, 0, 0, 0.1);
+}
+
+.tiptap p.is-editor-empty:first-child::before {
+	color: #adb5bd;
+	content: attr(data-placeholder);
+	float: left;
+	height: 0;
+	pointer-events: none;
+}
+
+.tiptap p.is-empty::before {
+	color: #adb5bd;
+	content: attr(data-placeholder);
+	float: left;
+	height: 0;
+	pointer-events: none;
+}
