--- a/backend/libs/mail/src/templates/user/verify-otp.template.hbs
+++ b/backend/libs/mail/src/templates/user/verify-otp.template.hbs
@@ -40,7 +40,7 @@
 							<td align='center' style='padding: 20px;'>
 								<table cellpadding='0' cellspacing='10' border='0'>
 									<tr>
-										<td
+										<span
 											style='
                         width: 40px;
                         height: 50px;
@@ -54,8 +54,8 @@
                       '
 										>
 											{{otp_1}}
-										</td>
-										<td
+										</span>
+										<span
 											style='
                         width: 40px;
                         height: 50px;
@@ -69,8 +69,8 @@
                       '
 										>
 											{{otp_2}}
-										</td>
-										<td
+										</span>
+										<span
 											style='
                         width: 40px;
                         height: 50px;
@@ -99,8 +99,8 @@
                       '
 										>
 											{{otp_4}}
-										</td>
-										<td
+										</span>
+										<span
 											style='
                         width: 40px;
                         height: 50px;
@@ -114,8 +114,8 @@
                       '
 										>
 											{{otp_5}}
-										</td>
-										<td
+										</span>
+										<span
 											style='
                         width: 40px;
                         height: 50px;
@@ -129,7 +129,7 @@
                       '
 										>
 											{{otp_6}}
-										</td>
+										</span>
 									</tr>
 								</table>
 							</td>
